feat: use generator instead of response writer

--- a/examples/echo/CMakeLists.txt
+++ b/examples/echo/CMakeLists.txt
@@ -1,4 +1,5 @@
 project(echo)
 
 add_executable(${PROJECT_NAME} server.cpp)
-target_link_libraries(${PROJECT_NAME} http-server)
+target_link_libraries(${PROJECT_NAME} http-server spdlog::spdlog)
+
