--- a/examples/multipart/CMakeLists.txt
+++ b/examples/multipart/CMakeLists.txt
@@ -1,5 +1,4 @@
-project(echo_w_signals)
+project(multipart)
 
 add_executable(${PROJECT_NAME} server.cpp)
 target_link_libraries(${PROJECT_NAME} http-server spdlog::spdlog)
-
