feat: use coro; expose body

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ include(cmake/dependencies.cmake)
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DASIO_ENABLE_HANDLER_TRACKING")
 
-add_library(${PROJECT_NAME} STATIC src/http-server.cpp src/route.cpp)
+add_library(${PROJECT_NAME} STATIC src/http-server.cpp src/request.cpp src/route.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt asio::asio PRIVATE spdlog::spdlog)
+target_link_libraries(${PROJECT_NAME} PUBLIC fmt::fmt coro asio::asio PRIVATE spdlog::spdlog)
 
 add_subdirectory(test)
 
